--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-smooth-number-counter": "^0.0.5",
-    "recharts": "^2.1.10",
-    "styled-components": "^5.3.5",
-    "typeit-react": "^2.4.4",
-    "react-tsparticles": "^2.0.6",
     "react-styled-grid-layout": "^1.0.2",
-    "source-map": "^0.8.0-beta.0"
+    "react-tsparticles": "^2.0.6",
+    "recharts": "^2.1.10",
+    "source-map": "^0.8.0-beta.0",
+    "styled-components": "^5.3.5",
+    "tsparticles": "^2.0.6",
+    "typeit-react": "^2.4.4"
   }
 }
