--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.15.2",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-channel": "^2.0.1",
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-mdx": "^3.15.2",
     "gatsby-plugin-react-svg": "^3.1.0",
