--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@typeform/embed-react": "^1.17.0",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.15.2",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-channel": "^2.0.1",
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-mdx": "^3.15.2",
