--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-channel": "^2.0.1",
+    "gatsby-plugin-google-gtag": "^4.16.0",
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-mdx": "^3.15.2",
     "gatsby-plugin-react-svg": "^3.1.0",
