--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-mdx": "^3.15.2",
     "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^4.15.1",
+    "gatsby-plugin-sitemap": "^5.16.0",
     "gatsby-plugin-styled-components": "^5.15.0",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.1",
