--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-google-gtag": "^4.16.0",
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-mdx": "^3.15.2",
+    "gatsby-plugin-react-helmet": "^5.16.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
@@ -39,6 +40,7 @@
     "gatsby-transformer-sharp": "^4.15.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-rounded-image": "^2.0.14",
     "react-smooth-number-counter": "^0.0.5",
