--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-google-gtag": "^4.16.0",
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-mdx": "^3.15.2",
+    "gatsby-plugin-netlify": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.16.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.7.1",
@@ -38,6 +39,7 @@
     "gatsby-plugin-styled-components": "^5.15.0",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.1",
+    "netlify-cms-app": "^2.15.72",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
