--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gatsby-plugin-google-gtag": "^4.16.0",
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-mdx": "^3.15.2",
-    "gatsby-plugin-netlify": "^5.0.0",
+    "gatsby-plugin-netlify-cms": "^6.16.0",
     "gatsby-plugin-react-helmet": "^5.16.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.7.1",
