--- a/package.json
+++ b/package.json
@@ -37,7 +37,13 @@
     "gatsby-plugin-sharp": "^4.15.1",
     "gatsby-plugin-sitemap": "^5.16.0",
     "gatsby-plugin-styled-components": "^5.15.0",
+    "gatsby-remark-copy-linked-files": "^5.16.0",
+    "gatsby-remark-images": "^6.16.0",
+    "gatsby-remark-prismjs": "^6.16.0",
+    "gatsby-remark-responsive-iframe": "^5.16.0",
+    "gatsby-remark-smartypants": "^5.16.0",
     "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-transformer-remark": "^5.16.0",
     "gatsby-transformer-sharp": "^4.15.1",
     "html-webpack-plugin": "^5.5.0",
     "netlify-cms-app": "^2.15.72",
