--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,7 @@ collections:
     media_folder: ''
     public_folder: ''
     path: '{{title}}/index'
+    filter: {field: "collection", value: "blog"}
     editor:
       preview: false
     fields:
@@ -29,6 +30,7 @@ collections:
     media_folder: ''
     public_folder: ''
     path: '{{title}}/index'
+    filter: {field: "collection", value: "guide"}
     editor:
       preview: false
     fields:
